--- a/index.html
+++ b/index.html
@@ -280,7 +280,11 @@
         </header>
     <main>
         <div class="profile">
-            <p>Desenvolvedor Web com especialização em Telemática e graduação em Ciência da Computação, possuindo vasta experiência em desenvolvimento de sistemas utilizando PHP, JavaScript, e diversas tecnologias web. Atualmente focado no desenvolvimento e integração de sistemas de processos judiciais eletrônicos, com dedicação constante ao aprimoramento de práticas como S.O.L.I.D, Clean Code, Clean Architecture e DDD. Iniciando estudos em tecnologias para captura e apresentação de Telemetria.</p>
+            <p>Desenvolvedor Web com especialização em Telemática e graduação em Ciência da Computação, possuindo vasta experiência em 
+                desenvolvimento de sistemas utilizando PHP, JavaScript, e diversas tecnologias web. Atualmente focado no desenvolvimento e 
+                integração de sistemas de processos judiciais eletrônicos, com dedicação constante ao aprimoramento de práticas como S.O.L.I.D, 
+                Clean Code, Clean Architecture e DDD. Implementação de ferramentas para captura e apresentação de Telemetria.
+            </p>
         </div>
         
         <section>
