--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <a href="mailto:paulo.torres.apps@gmail.com">paulo.torres.apps@gmail.com</a>
                     <a href="https://github.com/nepanuceno" target="_blank">github.com/nepanuceno</a>
                     <p>Nacionalidade: Brasileira</p>
-                    <p>Atualizado em: 19 de maio de 2025</p>
+                    <p>Atualizado em: 03 de maio de 2025</p>
                 </div>
             </div>
         </header>
@@ -310,11 +310,28 @@
                 <span class="skill">SASS</span>
                 <span class="skill">Twig</span>
                 <span class="skill">Zend Framework</span>
+                <span class="skill">Telemetria</span>
+                 <span class="skill">Grafana</span>
+                 <span class="skill">Prometheus</span>
             </div>
         </section>
         
         <section>
             <h2>EXPERIÊNCIA PROFISSIONAL</h2>
+
+            <div class="experience-item">
+                <div class="company">Click </div>
+                <div class="job-title">Prestação de Serviços DevOps</div>
+                <div class="period">Janeiro de a Junho de 2025</div>
+                <div class="job-details">
+                    <p>Principais atividades:</p>
+                    <ul>
+                        <li>Deploy de uma aplicação NodeJS + React</li>
+                        <li>Configuração de Firewall na VPS</li>
+                        <li>Implementação de coleta de Telemetria em diversos serviços e apresentação no Grafana</li>
+                    </ul>
+                </div>
+            </div>
             
             <div class="experience-item">
                 <div class="company">Ministério Público do Estado do Tocantins (MPE-TO)</div>
@@ -325,6 +342,7 @@
                     <ul>
                         <li>Desenvolvimento e manutenção do Sistema de Processo Eletrônico da Justiça Federal da 4ª Região (EPROC) - PHP 8.x, Twig, BootstrapCSS e JavaScript ECMA 6</li>
                         <li>Desenvolvimento de API EPROC para intercomunicação com o Sistema Integrare</li>
+                        <li>Iniciando desenvolvimento na Aplicação Athenas (Python3.13 + ExtJS v.3)</li>
                     </ul>
                 </div>
             </div>
