--- a/index.html
+++ b/index.html
@@ -320,15 +320,19 @@
             <h2>EXPERIÊNCIA PROFISSIONAL</h2>
 
             <div class="experience-item">
-                <div class="company">Click </div>
+                <div class="company">Clic Performance Web</div>
                 <div class="job-title">Prestação de Serviços DevOps</div>
                 <div class="period">Janeiro de a Junho de 2025</div>
                 <div class="job-details">
                     <p>Principais atividades:</p>
                     <ul>
-                        <li>Deploy de uma aplicação NodeJS + React</li>
+                        <li>Deploy de uma aplicação NodeJS + React em VPS Linux, com implantação Docker dos serviços de NGINX com Proxy Reverso,
+                            Banco da Dados, BackEnd da Aplicação NodeJS, Evolution API para integração com WhatsApp, N8N para automatizar fluxos de Mensagens, Redis e demais serviços para 
+                            a coleta e apresentação dos dados e Informações de Telemetria.
+                        </li>
                         <li>Configuração de Firewall na VPS</li>
-                        <li>Implementação de coleta de Telemetria em diversos serviços e apresentação no Grafana</li>
+                        <li>Desenvolvimento e implementação rotina de Backup automático e recuperação do Banco de Dados</li>
+                        <li>Desenvolvimento e implantação de deploy automático com GitHub Actions</li>
                     </ul>
                 </div>
             </div>
