--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <div class="experience-item">
                 <div class="company">Clic Performance Web</div>
                 <div class="job-title">Prestação de Serviços DevOps</div>
-                <div class="period">Janeiro de a Junho de 2025</div>
+                <div class="period">Janeiro a Junho de 2025</div>
                 <div class="job-details">
                     <p>Principais atividades:</p>
                     <ul>
