--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <a href="mailto:paulo.torres.apps@gmail.com">paulo.torres.apps@gmail.com</a>
                     <a href="https://github.com/nepanuceno" target="_blank">github.com/nepanuceno</a>
                     <p>Nacionalidade: Brasileira</p>
-                    <p>Atualizado em: 03 de maio de 2025</p>
+                    <p>Atualizado em: 03 de novembro de 2025</p>
                 </div>
             </div>
         </header>
@@ -476,7 +476,7 @@
     </main>
     
     <footer>
-        <p>Currículo atualizado em 19 de maio de 2025</p>
+        <p>Currículo atualizado em 03 de novembro de 2025</p>
     </footer>
 </div>
 </body>
